# personal-academic-website

./: .env.example  .env.preview.example  .env.production.example  .env.staging.example  .env.test.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  compose.yaml  eslint.config.mjs  manage.py  package-lock.json  package.json  pyproject.toml  stylelint.config.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
config/: foundation-governance.json  foundation-governance.schema.json  foundation-scope-manifest.json  foundation-scope-manifest.schema.json  product-baseline.json  product-baseline.schema.json  requirements-matrix.json  requirements-matrix.schema.json  scope-evidence-ledger.json  scope-evidence-ledger.schema.json
docs/architecture/: 0001-platform.md  0002-publication-boundary.md
docs/development/: environment.md  local-development.md  testing.md
docs/product/: audiences-and-goals.md  foundation-scope-decisions.md  governance.md  initial-content-inventory.md  legal-content-governance.md  revision-and-approval.md
docs/research/: architecture-options-matrix.md  foundation-literature-review.md  foundation-review-protocol.md  scope-evidence-protocol.md  scope-governance-literature-review.md
docs/traceability/: foundation.md  requirements-matrix.md
frontend/: main.test.ts
infra/aws/: README.md
scripts/: build_requirements_matrix.py  check_production_settings.py  localstack-init.sh  validate_environment.py  validate_foundation_governance.py  validate_foundation_manifest.py  validate_foundation_scope.py  validate_product_baseline.py  validate_requirements_matrix.py  validate_scope_evidence.py
src/apps/: __init__.py
src/paw/: __init__.py  asgi.py  urls.py  (+3 more)
tests/: test_database.py  test_environment.py  test_foundation_governance_validation.py  test_foundation_scope.py  test_product_baseline_validation.py  test_requirements_matrix.py  test_requirements_matrix_builder.py  test_scope_evidence_validation.py
(+26 files in other folders)
